[package]
name = "monox"
version = "0.3.0"
edition = "2024"
description = "Launch a single GUI app on X11 without a desktop environment"
repository = "https://github.com/JoseM656/monox-rs"
license = "MIT"

[dependencies]
tempfile = "3"
clap = { version = "4", features = ["derive"] }
which = "8.0.0"
